panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_empty_braced_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_empty_braced_initialiser.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_empty_braced_initialiser.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (declaration zero~5 `int` (braced ∅))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (name zero~5 `int`)))
         (declaration zeros~6 `array<int; 3>` (braced ∅))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (subscript (name zeros~6 `array<int; 3>`) 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (subscript (name zeros~6 `array<int; 3>`) 1)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 1)
               (subscript (name zeros~6 `array<int; 3>`) 2)))
         (declaration long_zero~7 `long` (braced ∅))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~4 `ptr<ptr<char>>`) 2)
               (name long_zero~7 `long`))))))

----- stderr -----
