panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_explicit_cast.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_explicit_cast.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_explicit_cast.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn(fmt: ptr<char const>) -> void`
      (params
         fmt~3 `ptr<char const>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name fmt~3 `ptr<char const>`)
               123))))
   (function-definition
      g~4 `fn() -> int`
      (compound-statement
         (return 42)))
   (function-definition
      main~6 `fn(argc: int, argv: ptr<ptr<char>>) -> int`
      (params
         argc~8 `int`
         argv~9 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (cast `void`
               (call (name f~1 `fn(fmt: ptr<char const>) -> void`)
                  (deref (add (name argv~9 `ptr<ptr<char>>`) 2)))))
         (expression (cast `void` 42))
         (expression (cast `void` (call (name g~4 `fn() -> int`))))
         (expression (cast `void` (name argc~8 `int`)))
         (expression (cast `void` (name argv~9 `ptr<ptr<char>>`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 1))
               (cast `ptr<void>` 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 1))
               (cast `ptr<void>` (cast `ptr<int const>` 0))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 1))
               (cast `ptr<void>` 42)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 1))
               (cast `ptr<void>` (negate 1))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 2))
               (cast `int` (cast `char` 128))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 2))
               (cast `int` (cast `unsigned char` 128))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 2))
               (cast `int` 42)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~9 `ptr<ptr<char>>`) 2))
               (cast `int` (cast `long` 42)))))))

----- stderr -----
