panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_global_variable_with_empty_initialiser_is_zero_initialised.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_global_variable_with_empty_initialiser_is_zero_initialised.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_global_variable_with_empty_initialiser_is_zero_initialised.c"
   (declaration zero~0 `int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (name zero~0 `int`)))))

----- stderr -----
