panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_initialisation_with_noop_type_conversion_gets_new_slot.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_initialisation_with_noop_type_conversion_gets_new_slot.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_initialisation_with_noop_type_conversion_gets_new_slot.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `unsigned int` 42)
         (declaration b~3 `int` 27)
         (return (name a~2 `unsigned int`)))))

----- stderr -----
