panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_int_signed_unsigned.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_int_signed_unsigned.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_int_signed_unsigned.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration x~3 `int` (negate 42))
         (declaration y~4 `unsigned int` 27)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (name x~3 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%u\n")
               (name y~4 `unsigned int`))))))

----- stderr -----
