panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_ptr_addressof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_addressof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_addressof.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration i1~2 `int` 42)
         (declaration i2~3 `int` 27)
         (declaration p1~4 `ptr<int>` (addressof (name i1~2 `int`)))
         (declaration p2~5 `ptr<int>` (addressof (name i2~3 `int`)))
         (return (add (add (add (equal (name p1~4 `ptr<int>`) (addressof (name i1~2 `int`))) (equal (name p2~5 `ptr<int>`) (addressof (name i2~3 `int`)))) (equal (add (name p1~4 `ptr<int>`) 1) (name p2~5 `ptr<int>`))) (equal (subtract (name p2~5 `ptr<int>`) 1) (name p1~4 `ptr<int>`)))))))

----- stderr -----
