panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_ptr_ref_of_deref_is_noop.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_ref_of_deref_is_noop.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_ref_of_deref_is_noop.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (declaration p~3 `ptr<int>` (addressof (name x~2 `int`)))
         (declaration q~4 `ptr<int>` (addressof (deref (name p~3 `ptr<int>`))))
         (return (deref (name q~4 `ptr<int>`))))))

----- stderr -----
