panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_ptr_relations.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_relations.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_relations.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration p1~2 `ptr<long>` ∅)
         (declaration b~3 `unsigned long long` 42)
         (declaration p2~4 `ptr<long>` (add (name b~3 `unsigned long long`) (name p1~2 `ptr<long>`)))
         (declaration p3~5 `ptr<long>` (subtract (name p2~4 `ptr<long>`) (name b~3 `unsigned long long`)))
         (return (add (add (add (less (name p1~2 `ptr<long>`) (name p2~4 `ptr<long>`)) (less-equal (name p1~2 `ptr<long>`) (name p3~5 `ptr<long>`))) (greater (name p2~4 `ptr<long>`) (name p1~2 `ptr<long>`))) (greater-equal (name p3~5 `ptr<long>`) (name p1~2 `ptr<long>`)))))))

----- stderr -----
