panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__test_ptr_to_char_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_to_char_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_to_char_deref.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `char` 42)
         (declaration p~3 `ptr<char>` (addressof (name x~2 `char`)))
         (declaration pp~4 `ptr<ptr<char>>` (addressof (name p~3 `ptr<char>`)))
         (return (deref (deref (name pp~4 `ptr<ptr<char>>`)))))))

----- stderr -----
